# Jetutils

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  env12.yml  main.py  mkdocs.yml  pyproject.toml
docs/: anyspell.md  clustering.md  conf.py  data.md  definitions.md  geospatial.md  index.md  index.rst  jet_finding.md  jetstream_hugo.anyspell.rst  jetstream_hugo.clustering.rst  jetstream_hugo.data.rst  jetstream_hugo.definitions.rst  jetstream_hugo.jet_finding.rst  jetstream_hugo.plots.rst  jetstream_hugo.rst  jetstream_hugo.stats.rst  jetstream_hugo.wavebreaking.rst  jetutils.anyspell.rst  jetutils.clustering.rst  jetutils.data.rst  jetutils.definitions.rst  jetutils.jet_finding.rst  jetutils.plots.rst  jetutils.rst  jetutils.stats.rst  jetutils.wavebreaking.rst  modules.rst  plots.md  requirements.txt
docs/source/: conf.py  index.rst
jestex/: anyspell.py  clustering.py  data.py  definitions.py  jet_finding.py  wavebreaking.py
jetstream_hugo/: .readthedocs.yaml  anyspell.py  clustering.py  data.py  definitions.py  jet_finding.py  plots.py  stats.py  wavebreaking.py
jetutils/: anyspell.py  anyspell_polars.py  anyspell_xarray.py  clustering.py  config.ini  data.py  definitions.py  derived_quantities.py  frangi_polars.py  frechet.py  geospatial.py  jet_finding.py  matplotlibrc  plots.py  stats.py
notebooks/local/: OR_dr.tex  OR_hw.tex  OR_pe.tex  Paper2_graph.ipynb  Paper2_redux.ipynb  Paper2_strict.ipynb  bias_correct.ipynb  cesm_stuff.ipynb  download_s2s.ipynb  dry_pred.ipynb  henrik_stuff_cc.ipynb  henrik_stuff_local.ipynb  hilla_stuff.ipynb  hot_pred.ipynb  intransivity.ipynb  jet_centred_emfi.ipynb  jet_pers_cesm.ipynb  jet_pers_local_v2.ipynb  jet_pers_new_tests.ipynb  many_boxes.ipynb  new_download.ipynb  paper1_redux.ipynb  pers_graph copy.ipynb  pers_graph.ipynb  random.ipynb  s2s.ipynb  wb_faster.ipynb  wet_pred.ipynb
scripts/: do_cc.py  do_cc.sbatch  do_exp10.py  do_exp9.py  do_exp9.sbatch  fix_cat.py  fix_cat.sbatch  henrik_jets.py  new_rwb.py  new_rwb.sbatch
scripts/Jupyter/: jupyter-compute  launch_jupyter.sh
scripts/download_cesm/: by_file.py
scripts/download_era5/: download.sbatch  download_ERA5.py  download_ERA5_mars.py  download_ERA5_single.py  zarrify.py  zarrify.sbatch
snippets/: jet_props_hotspells_old.ipynb  som_extras.ipynb
src/jetstream_hugo/: anyspell.py  clustering.py  data.py  definitions.py  hotspells.py  jet_finding.py  plots.py  (+2 more)
(+30 files in other folders)
