#!/bin/python

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Jetutils"
version = "0.8.0"
authors = [
  { name="Hugo Banderier", email="hugo.banderier@unibe.ch" },
]
description = "JEt STream and EXtreme events analysis"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
]

[project.urls]
"Homepage" = "https://github.com/hbanderi/jestex"
"Bug Tracker" = "https://github.com/hbanderi/jestex/issues"

