[project]
name = "jetutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cartopy>=0.25.0",
    "colormaps>=0.5.0",
    "dask>=2026.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mkdocstrings-python>=2.0.3",
    "nbstripout>=0.9.1",
    "numpy>=2.4.6",
    "polars>=1.41.2",
    "polars-ds>=0.12.0",
    "polars-st>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "simpsom-dask>=1.0.3",
    "tqdm>=4.67.3",
    "xarray>=2026.4.0",
]
