[project]
name = "jetutils"
version = "0.8.0"
authors = [
  { name="Hugo Banderier", email="hugo.banderier@unibe.ch" },
]
description = "JEt STream and EXtreme events analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cartopy>=0.25.0",
    "cdsapi>=0.7.7",
    "cfgrib>=0.9.15.1",
    "colormaps>=0.5.0",
    "dask>=2026.3.0",
    "distributed>=2026.3.0",
    "ipython>=9.14.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mkdocstrings-python>=2.0.3",
    "nbstripout>=0.9.1",
    "netcdf4>=1.7.4",
    "numpy>=2.4.6",
    "polars>=1.41.2",
    "polars-ds>=0.12.0",
    "polars-st>=0.7.0",
    "rustworkx>=0.17.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "simpsom-dask>=1.0.3",
    "tqdm>=4.67.3",
    "xarray>=2026.4.0",
    "zarr>=3.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/hbanderi/jetutils"
"Bug Tracker" = "https://github.com/hbanderi/jetutils/issues"
